add notification for empty inputs

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 		<section class="form-align">
 			<div class="form-bg">
 				<h4>ADD PERSON</h4>
+				<div class="notification"></div>
 				<form name="registration">
 					<div class="input-align-bloc">
 						<div class="input-align">
@@ -48,7 +49,7 @@
 							<label>Last name</label>
 						</div>
 					</div>
-					<button>SUBMIT</button>
+					<button>ADD</button>
 				</form>
 				<div class="table-align">
 					<table>
